typescript/checker/tests/conformance/types/tuple/wideningTuples3.ts.stderr
error: ImplicitAny {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            43,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:5
  |
4 | var b = a = [undefined, null];
  |     ^

error: AssignFailed {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
    left: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    30,
                ),
                hi: BytePos(
                    35,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                31,
                            ),
                            hi: BytePos(
                                34,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
            ],
        },
    ),
    right: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    50,
                ),
                hi: BytePos(
                    67,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                51,
                            ),
                            hi: BytePos(
                                60,
                            ),
                            ctxt: #0,
                        },
                        kind: TsUndefinedKeyword,
                    },
                ),
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                62,
                            ),
                            hi: BytePos(
                                66,
                            ),
                            ctxt: #0,
                        },
                        kind: TsNullKeyword,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples3.ts:4:9
  |
4 | var b = a = [undefined, null];
  |         ^

